# rules_pg

./: .gitignore  BUILD.bazel  DESIGN.md  MODULE.bazel  README.md  extensions.bzl  repositories.bzl
.github/workflows/: ci.yml
private/: launcher.py  server.bzl  test.bzl
tests/: BUILD.bazel
tools/: BUILD.bazel  conda_versions.bzl  update_conda_versions.py
