module(
    name = "rules_pg",
    version = "0.4.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")

# rules_shell is part of the public surface — `pg_test` defaults to
# `sh_test`. Bazel 8+ removed `native.sh_test`, so the macro has to
# import it from rules_shell. Consumers transitively need it unless
# they override `test_rule = ...` to swap in another *_test rule.
bazel_dep(name = "rules_shell", version = "0.8.0")

# Register the module extension that provides pg binaries.
#
# Two modes, can coexist (per-version):
#   pg.system(versions = [...])  — reuse host-installed PostgreSQL
#   pg.version(versions = [...]) — fetch hermetic binaries from
#                                  conda-forge (v0.4+, full transitive
#                                  closure ~15-25 packages per version)
#
# rules_pg's own MODULE.bazel uses pg.version() for all three majors
# so CI runs on a bare ubuntu-latest with no host postgres. Consumers
# pick their own mode; the pg.system() path is exercised via the
# in-tree pg.system tag-class plumbing tests, not via the test fixture
# wiring.
pg = use_extension("//:extensions.bzl", "pg")
pg.version(versions = ["14", "15", "16"])
use_repo(pg, "pg_14_linux_amd64", "pg_14_darwin_arm64", "pg_14_darwin_amd64")
use_repo(pg, "pg_15_linux_amd64", "pg_15_darwin_arm64", "pg_15_darwin_amd64")
use_repo(pg, "pg_16_linux_amd64", "pg_16_darwin_arm64", "pg_16_darwin_amd64")
